Enhance SVN Server WebUI: Implement CSP in Helmet, improve error handling in SVN service, add development notes, create Docker build script, and set up Docker Compose for streamlined deployment.

--- a/docker/apache/httpd.conf
+++ b/docker/apache/httpd.conf
@@ -22,6 +22,7 @@ LoadModule status_module /usr/lib/apache2/mod_status.so
 LoadModule autoindex_module /usr/lib/apache2/mod_autoindex.so
 LoadModule dir_module /usr/lib/apache2/mod_dir.so
 LoadModule alias_module /usr/lib/apache2/mod_alias.so
+LoadModule negotiation_module /usr/lib/apache2/mod_negotiation.so
 
 Listen 80
 ServerAdmin admin@localhost
