--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,7 @@
     "@ant-design/icons": "^5.3.6",
     "axios": "^1.6.8",
     "dayjs": "^1.11.11",
-    "react-query": "^3.39.3",
+    "@tanstack/react-query": "^5.17.0",
     "zustand": "^4.5.2",
     "react-syntax-highlighter": "^15.5.0"
   },
