--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -1,10 +1,13 @@
+
 services:
   svn-server:
-    image: svn-server-webui:latest
+    build: 
+      context: .
+      dockerfile: Dockerfile
     container_name: svn-server-webui
     ports:
       - "80:80"       # SVN via HTTP
-      - "3000:5000"   # Web UI (改用3000端口避免与AirPlay冲突)
+      - "5000:5000"   # Web UI (如果5000端口被占用，可改为 "3000:5000")
     volumes:
       # 只需映射一个目录，简化使用
       - ./data:/data
