fix: 更新 Docker 镜像名称为 rongdede/svn-server-webui，修正构建脚本和 Docker Compose 示例

--- a/docker-compose.prod.example.yml
+++ b/docker-compose.prod.example.yml
@@ -1,7 +1,7 @@
 
 services:
   svn-server:
-    image: ghcr.io/yourusername/svn-server-webui:latest
+    image: rongdede/svn-server-webui:latest
     container_name: svn-server-webui
     ports:
       - "443:80"      # 使用 HTTPS（需要配置反向代理）
